--- a/titanic_feature/feature_repo/feature_store.yaml
+++ b/titanic_feature/feature_repo/feature_store.yaml
@@ -1,7 +1,7 @@
 project: titanic_feature
 provider: local
 registry:
-    registry_store_type: feast_postgres.PostgreSQLRegistryStore
+    registry_store_type: PostgreSQLRegistryStore
     path: feast_registry
     host: postgresql.default.svc.cluster.local
     port: 5432
@@ -10,7 +10,7 @@ registry:
     user: feast
     password: feast
 online_store:
-    type: feast_postgres.PostgreSQLOnlineStore
+    type: postgres
     host: postgresql.default.svc.cluster.local
     port: 5432
     database: feast
@@ -21,7 +21,7 @@ online_store:
     #redis_type: redis_cluster
     #connection_string: "redis-master.default.svc.cluster.local:6379,ssl=false,password=bvedFOdDcY"
 offline_store:
-    type: feast_postgres.PostgreSQLOfflineStore
+    type: postgres
     host: postgresql.default.svc.cluster.local
     port: 5432
     database: feast
